# cairn-ehr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  mkdocs.yml  rust-toolchain.toml
.github/workflows/: docs.yml  matcher.yml  rust.yml
cairn-gui/: Cargo.toml
cairn-gui/cairn-gui-data/: Cargo.toml
cairn-gui/cairn-gui-data/src/: lib.rs  mock.rs  port.rs
cairn-gui/cairn-gui-manifest/: Cargo.toml
cairn-gui/cairn-gui-manifest/src/: lib.rs  merge.rs  model.rs
cairn-gui/cairn-gui-shell/: Cargo.toml
cairn-gui/cairn-gui-shell/results/: 2026-07-12-macbook-workstation.md  RUNBOOK.md  TEMPLATE.md
cairn-gui/cairn-gui-shell/src/: a11y_dump.rs  app.rs  freshness.rs  lib.rs  workspace.rs
cairn-gui/cairn-gui-tab/: Cargo.toml
cairn-gui/cairn-gui-tab/src/: context.rs  lib.rs  semantics.rs  tab.rs
cairn-gui/cairn-gui-tabs/cairn-gui-tab-demographics/: Cargo.toml
cairn-gui/cairn-gui-tabs/cairn-gui-tab-demographics/src/: lib.rs
cairn-gui/cairn-gui-tabs/cairn-gui-tab-note/: Cargo.toml
cairn-gui/cairn-gui-tabs/cairn-gui-tab-note/src/: lib.rs
crates/cairn-event/: Cargo.toml
crates/cairn-event/src/: attachment.rs  contributor.rs  demographics.rs  evidence.rs  framing.rs  identity.rs  identity_evidence.rs  john_doe.rs  lib.rs  medication.rs  schema_generation.rs  seal.rs
crates/cairn-event/tests/: clock_grade.rs  property_contributor.proptest-regressions  property_contributor.rs  schema_generation.rs
crates/cairn-node/: Cargo.toml
crates/cairn-node/src/: apply_proposal.rs  auto_apply.rs  db.rs  enroll.rs  evidence.rs  fsio.rs  identify.rs  identity.rs  identity_evidence.rs  john_doe.rs  keystore.rs  lib.rs  localstate.rs  main.rs  matcher_actor.rs  medication.rs  (+8 more)
crates/cairn-sync/: Cargo.toml
crates/cairn-sync/src/: main.rs
crates/cairn-sync/tests/: clinical_pull.rs
db/: 001_envelope.sql  002_projection.sql  003_blobs.sql  004_actors.sql  005_submit.sql  006_recall.sql  007_node_federation.sql  008_surrogate_projection.sql  009_node_supersede_and_restore.sql  010_demographics.sql  011_demographics_fields.sql  012_demographics_names.sql  013_demographics_sex_gender.sql  014_demographics_address.sql  015_globalise_twin.sql  016_match_veto.sql  017_match_proposal.sql  018_identity_linkage.sql  019_apply_proposal.sql  020_apply_remote_event.sql  021_sync_quarantine.sql  022_node_event_quarantine.sql  023_identity_dispute.sql  024_identity_identify.sql  025_identity_repudiate.sql  026_blob_verify_floor.sql  027_attachment_rendition_references.sql  028_identity_evidence.sql  029_hlc_collision_log.sql  030_john_doe_local_ordinal.sql  031_medication.sql  032_medication_dose.sql  033_medication_reconciliation.sql  034_medication_attestation.sql  035_medication_dose_effective_correction.sql  036_clinical_sync_seq.sql  037_born_sealed.sql  038_node_schema.sql  039_projection_registry.sql  040_clock_confidence_grade.sql
db/tests/: 004_actors_test.sql  006_recall_test.sql  007_node_federation_test.sql  020_apply_remote_event_test.sql  021_sync_quarantine_test.sql  022_node_event_quarantine_test.sql  034_twin_registry_test.sql  039_projection_registry_test.sql  040_clock_confidence_grade_test.sql
docs/: CNAME  HANDOVER.md  ROADMAP.md  requirements.txt
docs/case-studies/: 0001-improving-practice-software-column.md  README.md
docs/code_reviews/: 2026-07-15-whole-project-architecture-review.md
docs/developers/: index.md
docs/ecosystem/: 0003-reference-data-sourcing-medicines-and-terminologies.md  0004-reference-ui-framework-iced-vs-tauri.md  README.md
docs/essays/: health-records-reinvented.md  index.md
docs/spec/: data-model.md  deployment.md  identity.md  index.md  language-substrate.md  open-questions.md  security.md  sync.md  technology.md  vision.md
docs/spikes/: 0001-walking-skeleton-wan-sync-and-pi-cost.md  0002-advisory-actor-write-contract.md  0002-prescribing-vertical-slice.md  0004-iced-reference-ui-viability.md  README.md
extensions/cairn_pgx/: Cargo.toml  cairn_pgx.control
extensions/cairn_pgx/src/: lib.rs
matcher/: README.md  pyproject.toml
matcher/src/cairn_matcher/: comparators.py  orchestrator.py  placeholder_uses.py  records.py  scoring.py
matcher/src/cairn_matcher/eval/: blocking_eval.py  crossval.py  dataset.py  generate.py  generator.py  learn.py  learner.py  model_io.py  scorer_eval.py
matcher/src/cairn_matcher/pipeline/: adapter.py  alias.py  banding.py  blocking.py  db.py  runner.py  sweep.py
matcher/tests/: conftest.py  test_adapter_record.py  test_alias.py  test_alias_pipeline.py  test_banding.py  test_blocking_passes.py  test_candidate_generation.py  test_comparator_dob.py  test_comparator_identifier.py  test_comparator_name.py  test_comparator_sex.py  test_compare_dob_range.py  test_conftest_lifecycle.py  test_date_value_range.py  test_dob_range_blocking.py  test_eval_blocking.py  test_eval_crossval.py  test_eval_dataset.py  test_eval_generator.py  test_eval_generator_range.py  test_eval_generator_sync.py  test_eval_generator_volume.py  test_eval_learn.py  test_eval_learn_cli.py  test_eval_learn_model.py  test_eval_model_io.py  test_eval_report.py  test_eval_thresholds.py  test_eval_truth.py  test_identity_pending_pipeline.py  test_john_doe_exclusion.py  test_observed_age_pipeline.py  test_orchestrator.py  test_parse_dob_range.py  test_pipeline_smoke.py  test_placeholder_uses_sync.py  test_properties.py  test_proposal_retraction.py  test_scoring.py  test_sweep.py
packaging/: README.md
packaging/crates/: Cargo.toml  README.md
packaging/npm/: README.md  index.js  package.json
packaging/pypi/: README.md  pyproject.toml
poc/iced-ui-spike/: Cargo.toml  README.md
poc/iced-ui-spike/results/: TEMPLATE.md
poc/iced-ui-spike/src/: corpus.rs  form.rs  latency.rs  lib.rs  shaping.rs
poc/pg-android-kit/: 05-run-extension-on-device.sh  README.md
poc/walking-skeleton/: PI-RUNBOOK.md  README.md
scratch/ui-sketches/: easygp-consult-screen-inventory.md  easygp-editing-area-inventory.md  easygp-prefetch-notes.md
scripts/: bench-reproject.sh  run-db-sql-tests.sh
web/: index.html  styles.css
(+218 files in other folders)
