[project]
name = "cairn-matcher"
version = "0.1.0"
description = "Cairn advisory patient-matching scoring core (piece B1): pure Fellegi–Sunter scoring over projected demographic records."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "Horst Herb" }]
keywords = ["ehr", "record-linkage", "fellegi-sunter", "patient-matching"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.urls]
Homepage = "https://cairn-ehr.org"
Repository = "https://github.com/cairn-ehr/cairn-ehr"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn_matcher"]

[project.optional-dependencies]
pipeline = ["psycopg[binary]>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
# 100 columns, matching the Rust workspace's rustfmt max_width — one width across the whole repo.
line-length = 100

[tool.ruff.lint]
# The linting contract the matcher CI enforces, stated EXPLICITLY so a ruff version bump can
# never silently change what "clean" means. Beyond ruff's defaults (F pyflakes — unused
# imports/names, real bugs; plus the E4/E7/E9 pycodestyle subset — imports/statements/syntax)
# this enforces:
#   E5 — line length (line-too-long), at the 100-col repo width above
#   I  — import sorting (isort), so import order cannot drift
#   UP — pyupgrade, keeping the code idiomatic for the py311 floor
#   B  — flake8-bugbear, catching real footguns (e.g. zip() without an explicit strict=)
# The code is clean under the full set (imports auto-sorted, one zip() made strict-explicit,
# and the handful of >100-col lines wrapped).
select = ["E4", "E5", "E7", "E9", "F", "I", "UP", "B"]
