[package]
name = "cairn-sync"
version = "0.0.0"
description = "Cairn walking skeleton — thin set-union ship/apply daemon and the preemptible lazy blob tier (Spike 0001 §3, §5)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# The sync daemon application, not a crates.io library: never published. Also lets the internal
# `cairn-event` path dependency omit a version without tripping the cargo-deny wildcard gate.
publish = false

# Inherit the central workspace lint policy (#144).
[lints]
workspace = true

[dependencies]
cairn-event = { path = "../cairn-event" }
postgres = "0.19"          # sync client; NoTls — WireGuard is the transport (spike assumption)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
hex = "0.4"
chacha20poly1305 = "0.10"  # Bet B (B3): DEK-wrap / body-seal keystore-cost microbench

[dev-dependencies]
# The A→B clinical-plane pull test (#199, review finding B4): provisions both nodes'
# schemas and authors real medication events through cairn-node's orchestrators, then
# drives THIS crate's binary (serve on A, pull on B) between them and asserts the two
# nodes' projections are identical. Both are workspace-internal / already-vetted deps.
cairn-node = { path = "../cairn-node" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
# Per-node key files for the ADR-0052 custody wire: each test writes its serve/pull
# key into a TempDir that auto-cleans on drop (no node.key litter in the crate cwd).
tempfile = "3"
