[package]
name = "cairn_pgx"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib"]

# NB: pgrx >= 0.13 embeds the SQL entity graph directly into the cdylib via a linker
# section (see `pg_magic_func!`), so the old `pgrx_embed` helper bin (and the
# `::pgrx::pgrx_embed!()` macro, removed in 0.18) is no longer needed and was deleted.

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16"]
# PG18 support: the federation node / clinical substrate targets PostgreSQL >= 18
# (spec §9). pgrx 0.12.x predates PG18, so reaching it required moving to a
# pg18-capable pgrx (matched to the installed cargo-pgrx). Build/install for PG18 with
# `--no-default-features --features pg18` (pgrx permits exactly one `pgNN` feature).
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.18.1"
cairn-event = { path = "../../crates/cairn-event" }
serde_json = "1" # used by cairn_body (later task) in non-test code
hex = "0.4" # pgrx pg_test feature compiles the tests module as a lib, not #[cfg(test)], so hex must be a regular dep

[dev-dependencies]
pgrx-tests = "=0.18.1"

[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"
opt-level = 3
